[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pedro Sousa <pedronsousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
openai = "^1.14.3"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
langchain-core = "^0.1.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
